# hfadnef-openmc-source

./: .gitignore  README.md
Compiled Source Method/src/: CMakeLists.txt  n_source.cpp
Compiled Source Method/src/data/: XS_0_endf.txt  XS_1_endf.txt  XS_ang1.txt  XS_t_endf.txt  XS_t_sek.txt  l&p_xs.txt
hfadnef_source/: readme.md
hfadnef_source/src/: n_source.cpp
hfadnef_source/src/data/: XS_0.txt  XS_1.txt  XS_ang0.txt  XS_t.txt  XS_t_ideal.txt  yield.txt
